<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/recordActivity"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:orientation="vertical"
    tools:context=".RecordActivity">

    <TextView
        android:id="@+id/cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/popf"
        android:text="Create Record"
        android:textColor="@color/white"
        android:textSize="26sp" />


    <EditText
        android:id="@+id/date"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Date(dd/mm/yyyy)"
        android:inputType="date"
        android:padding="10dp" />


    <EditText
        android:id="@+id/time"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Time(hh:mm)"
        android:inputType="datetime"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/systolicPressure"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Systolic Pressure(mmHg)"
        android:inputType="numberSigned"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/diastolic"
        app:layout_constraintTop_toBottomOf="@+id/diastolic"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/diastolicPressure"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Diastolic Pressure(mmHg)"
        android:inputType="numberSigned"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/diastolic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/diastolic"
        app:layout_constraintTop_toBottomOf="@+id/diastolic"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/heartRate"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Heart Rate(bpm)"
        android:inputType="numberSigned"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/systolic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/systolic"
        app:layout_constraintTop_toBottomOf="@+id/systolic"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="330dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Comment (maximum 20 character)"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pulse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pulse"
        app:layout_constraintTop_toBottomOf="@+id/pulse"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:background="@drawable/roundcorner"
        android:fontFamily="@font/popf"
        android:text="Save"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/notes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/notes"
        app:layout_constraintTop_toBottomOf="@+id/notes"
        app:layout_constraintVertical_bias="0.456"/>
<!--android:onClick="addRecord"-->



</LinearLayout>